Switch language and reload data.

--- a/src/assets/locales/zh-CN.json
+++ b/src/assets/locales/zh-CN.json
@@ -11,6 +11,7 @@
         "Alphabetical": "按字母排序",
         "Popularity": "按流行程度排序",
         "Categorical": "按分类排序",
+        "all-apps": "所有应用",
         "date generated": "生成时间",
         "total apps": "应用数量",
         "terms1": "使用本服务时，将视为同意我们的",
