--- a/src/assets/locales/zh-CN.json
+++ b/src/assets/locales/zh-CN.json
@@ -20,6 +20,7 @@
         "unknown": "unknown",
         "app-details": "查看应用信息",
         "share-app": "分享应用链接",
+        "copy-app": "复制应用链接",
         "Categories": "分类",
         "authors": "作者",
         "maintainers": "维护者",
