:rocket: Refactored storedb with async/await and fetch.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -39,7 +39,7 @@
     "4": "Four points",
     "5": "Five points"
   },
-  "rating-load": "Loading ratings...",
+  "load-ratings": "Loading ratings...",
   "download": "Download",
   "website": "Website",
   "repo": "Repository",
