--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,21 +2,20 @@
   "forums": "Forums",
   "chat": "Chat",
   "home": "Home",
-  "documentation": "Documentation",
+  "wikis": "Wikis",
+  "wiki": {
+    "legacy": "Wiki (legacy)",
+    "current": "Wiki (current)"
+  },
   "app-databases": "App Databases",
   "request-apps": "Request apps",
   "alphabetical": "Alphabetical",
   "popularity": "Popularity",
   "categorical": "Categorical",
   "all-apps": "All apps",
-  "date-generated": "date generated",
-  "total-apps": "total apps",
   "terms-footer": "By using the service, you agree to our",
   "privacy-policy": "Privacy Policy",
   "unknown": "unknown",
-  "view-app-details": "View app details",
-  "share-app": "Share link to app",
-  "copy-app": "Copy link to app",
   "categories": "Categories",
   "authors": "Author(s)",
   "maintainers": "Maintainer(s)",
@@ -43,7 +42,7 @@
   "download": "Download",
   "website": "Website",
   "repo": "Repository",
-  "donation": "Donate",
+  "donate": "Donate",
   "qr": {
     "1": "Scan the QR code below with",
     "2": "to install"
@@ -51,19 +50,16 @@
   "manually": "Or attempt to install directly/download manually below.",
   "install-directly": "Install directly",
   "download-manually": "Download manually",
-  "webstore-update": "WebStore update available",
-  "webstore-update-info": "There is an update for WebStore available. Click the update button to reload the new version.",
   "update": "Update",
   "ignore": "Ignore",
   "rating-load-error": "Ratings could not be loaded! Check the console for more info.",
   "download-record-error": "Failed to record download count! Check the console for more info.",
   "app-exist-error": "App does not exist in category",
-  "category-exist-error": {
-    "1": "Given category",
-    "2": "does not exist!"
-  },
   "data-load-success": "Data loaded successfully!",
   "data-load-error": "Data could not be loaded! Check the console for more info.",
   "app-sort-success": "Apps sorted successfully!",
-  "app-sort-error": "Apps could not be sorted! Check the console for more info."
+  "app-sort-error": "Apps could not be sorted! Check the console for more info.",
+  "copy-to-clipboard-success": "Copied sharable link to clipboard!",
+  "info": "Info",
+  "share": "Share"
 }
