:rocket: Split up code further & fix bugs.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,7 +27,7 @@
   "ads": "Ads",
   "tracking": "Tracking",
   "license": "License",
-  "download-count": "Downloads",
+  "downloads": "Downloads",
   "rating": "Rating",
   "your-rating": "Your rating",
   "login-to-rate": "To rate, log in using the button.",
@@ -43,17 +43,11 @@
   "website": "Website",
   "repo": "Repository",
   "donate": "Donate",
-  "qr": {
-    "1": "Scan the QR code below with",
-    "2": "to install"
-  },
-  "manually": "Or attempt to install directly/download manually below.",
+  "qr-scan-help": "Scan the QR code with a supported on-device client to install.",
+  "install-alternative-help": "Or attempt to install directly/download manually below.",
   "install-directly": "Install directly",
   "download-manually": "Download manually",
-  "update": "Update",
-  "ignore": "Ignore",
   "rating-load-error": "Ratings could not be loaded! Check the console for more info.",
-  "download-record-error": "Failed to record download count! Check the console for more info.",
   "app-exist-error": "App does not exist in category",
   "data-load-success": "Data loaded successfully!",
   "data-load-error": "Data could not be loaded! Check the console for more info.",
