--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,22 +1,26 @@
 {
-  "forums": "Forums",
-  "chat": "Chat",
-  "home": "Home",
-  "documentation": "Documentation",
-  "app-databases": "App Databases",
-  "request-apps": "Request apps",
+  "forums": "Diễn đàn",
+  "wikis": "Bách khoa",
+  "wiki": {
+    "legacy": "Bách khoa (cũ)",
+    "current": "Bách khoa (hiện tại)"
+  },
+  "chat": "Trò chuyện",
+  "app-databases": "Cơ sở dữ liệu ứng dụng",
+
   "alphabetical": "Alphabetical",
   "popularity": "Popularity",
   "categorical": "Categorical",
+
   "all-apps": "All apps",
-  "date-generated": "date generated",
-  "total-apps": "total apps",
+
+  "info": "Info",
+  "download": "Download",
+  "share": "Share",
+
   "terms-footer": "By using the service, you agree to our",
   "privacy-policy": "Privacy Policy",
   "unknown": "unknown",
-  "view-app-details": "View app details",
-  "share-app": "Share link to app",
-  "copy-app": "Copy link to app",
   "categories": "Categories",
   "authors": "Author(s)",
   "maintainers": "Maintainer(s)",
@@ -28,7 +32,7 @@
   "ads": "Ads",
   "tracking": "Tracking",
   "license": "License",
-  "download-count": "Downloads",
+  "downloads": "Downloads",
   "rating": "Rating",
   "your-rating": "Your rating",
   "login-to-rate": "To rate, log in using the button.",
@@ -39,31 +43,19 @@
     "4": "Four points",
     "5": "Five points"
   },
-  "rating-load": "Loading ratings...",
-  "download": "Download",
+  "load-ratings": "Loading ratings...",
   "website": "Website",
   "repo": "Repository",
-  "donation": "Donate",
-  "qr": {
-    "1": "Scan the QR code below with",
-    "2": "to install"
-  },
-  "manually": "Or attempt to install directly/download manually below.",
+  "donate": "Donate",
+  "qr-scan-help": "Scan the QR code with a supported on-device client to install.",
+  "install-alternative-help": "Or attempt to install directly/download manually below.",
   "install-directly": "Install directly",
   "download-manually": "Download manually",
-  "webstore-update": "WebStore update available",
-  "webstore-update-info": "There is an update for WebStore available. Click the update button to reload the new version.",
-  "update": "Update",
-  "ignore": "Ignore",
   "rating-load-error": "Ratings could not be loaded! Check the console for more info.",
-  "download-record-error": "Failed to record download count! Check the console for more info.",
   "app-exist-error": "App does not exist in category",
-  "category-exist-error": {
-    "1": "Given category",
-    "2": "does not exist!"
-  },
   "data-load-success": "Data loaded successfully!",
   "data-load-error": "Data could not be loaded! Check the console for more info.",
   "app-sort-success": "Apps sorted successfully!",
-  "app-sort-error": "Apps could not be sorted! Check the console for more info."
+  "app-sort-error": "Apps could not be sorted! Check the console for more info.",
+  "copy-to-clipboard-success": "Copied sharable link to clipboard!"
 }
