--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -8,56 +8,61 @@
   "chat": "Trò chuyện",
   "app-databases": "Cơ sở dữ liệu ứng dụng",
 
-  "alphabetical": "Alphabetical",
-  "popularity": "Popularity",
-  "categorical": "Categorical",
-  "ratings": "Xếp hạng",
+  "alphabetical": "Theo bảng chữ cái",
+  "popularity": "Theo phổ biến",
+  "categorical": "Theo phân loại",
+  "ratings": "Theo đánh giá",
 
-  "all-apps": "All apps",
+  "apps": "ứng dụng",
 
-  "info": "Info",
-  "download": "Download",
-  "share": "Share",
+  "all-apps": "Tất cả ứng dụng",
 
-  "terms-footer": "By using the service, you agree to our",
-  "privacy-policy": "Privacy Policy",
+  "info": "Thông tin",
+  "download": "Tải xuống",
+  "share": "Chia sẻ",
 
-  "categories": "Categories",
-  "authors": "Author(s)",
-  "maintainers": "Maintainer(s)",
-  "dependencies": "Dependencies",
-  "version": "Version",
+  "categories": "Thể loại",
+  "authors": "Tác giả",
+  "maintainers": "Người bảo trì",
+  "dependencies": "Phụ thuộc",
+  "version": "Phiên bản",
   "size": "Kích thước",
-  "type": "Type",
-  "locales": "Languages",
-  "anti-features": "Anti-features",
-  "ads": "Ads",
-  "tracking": "Tracking",
-  "license": "License",
-  "downloads": "Downloads",
-  "rating": "Rating",
-  "your-rating": "Your rating",
-  "login-to-rate": "To rate, log in using the button.",
+  "type": "Kiểu",
+  "locales": "Ngôn ngữ",
+  "anti-features": "Tính năng hại",
+  "ads": "Quảng cáo",
+  "tracking": "Theo dõi",
+  "license": "Giấy phép",
+  "downloads": "Lượt tải về",
+  "rating": "Đánh giá",
+  "your-rating": "Đánh giá của bạn",
+  "login-to-rate": "Để đánh giá, đăng nhập bằng nút người dùng ở trên góc bên phải.",
   "point": {
-    "1": "One point",
-    "2": "Two points",
-    "3": "Three points",
-    "4": "Four points",
-    "5": "Five points"
+    "1": "Một điểm",
+    "2": "Hai điểm",
+    "3": "Ba điểm",
+    "4": "Bốn điểm",
+    "5": "Năm điểm"
   },
-  "load-ratings": "Loading ratings...",
-  "website": "Website",
-  "repo": "Repository",
-  "donate": "Donate",
-  "qr-scan-help": "Scan the QR code with a supported on-device client to install.",
-  "install-alternative-help": "Or attempt to install directly/download manually below.",
-  "install-directly": "Install directly",
-  "download-manually": "Download manually",
-  "rating-load-error": "Ratings could not be loaded! Check the console for more info.",
-  "app-exist-error": "App does not exist in category",
-  "data-load-success": "Data loaded successfully!",
-  "data-load-error": "Data could not be loaded! Check the console for more info.",
-  "app-sort-success": "Apps sorted successfully!",
-  "app-sort-error": "Apps could not be sorted! Check the console for more info.",
-  "copy-to-clipboard-success": "Copied sharable link to clipboard!"
+  "load-ratings": "Đang tải đánh giá...",
+  "website": "Trang mạng",
+  "repo": "Repo Git",
+  "donate": "Quyên tặng nhà lập trình",
+
+  "qr-scan-help": "Quét mã QR bằng ứng dụng khách trên thiết bị được hỗ trợ để cài đặt.",
+  "install-alternative-help": "Hoặc cài đặt trực tiếp / tải xuống thủ công dưới đây.",
+  "install-directly": "Cài đặt trực tiếp.",
+  "download-manually": "Tải về thủ công",
+
+  "login-bhackers": "Đăng nhập vào BananaHackers",
+  "username": "Tên tài khoản",
+  "logintoken": "Mật khẩu",
+  "save-login-details": "Lưu lại thông tin đăng nhập.",
+  "login-failed-blurb": "Đăng nhập / đăng ký không thành công. Vui lòng thử lại bằng cách sử dụng thông tin đăng nhập khác nhau hoặc thử lại sau.",
+  "login-signup": "Đăng nhập/Đăng ký",
+
+  "terms-alert": "Bằng cách sử dụng dịch vụ, bạn đồng ý với",
+  "privacy-policy": "Chính sách bảo mật",
+
+  "copy-to-clipboard-success": "Sao chép đường link chia sẻ vào clipboard!"
 }
