--- a/src/assets/i18n/tl.json
+++ b/src/assets/i18n/tl.json
@@ -46,6 +46,7 @@
     "5": "Limang puntos"
   },
   "load-ratings": "Naglo-load ng ratings...",
+  "rating-incomplete-blurb": "2 o higit pang mga character na kinakailangan upang i-rate!",
   "website": "Website",
   "repo": "Repository",
   "donate": "Gumawa ng Donasyon",
