changed a few things to make translation less cringe

--- a/src/assets/i18n/tl.json
+++ b/src/assets/i18n/tl.json
@@ -13,13 +13,13 @@
   "categorical": "Ayon sa Kategorya",
   "ratings": "Ayon sa mga rating",
 
-  "apps": "mga app",
+  "apps": "na mga app",
 
   "all-apps": "Lahat ng mga app",
 
   "info": "Impormasyon",
-  "download": "i-Download",
-  "share": "i-Share",
+  "download": "I-download",
+  "share": "I-share",
 
   "categories": "Mga Kategorya",
   "authors": "Mga Awtor",
