--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,70 +1,70 @@
 {
   "forums": "Diễn đàn",
-  "wikis": "Bách khoa",
+  "wikis": "Wiki",
   "wiki": {
-    "legacy": "Bách khoa (cũ)",
-    "current": "Bách khoa (hiện tại)"
+    "legacy": "Wiki (cũ)",
+    "current": "Wiki (hiện tại)"
   },
-  "chat": "Trò chuyện",
-  "app-databases": "Cơ sở dữ liệu ứng dụng",
+  "chat": "Cần trao đổi?",
+  "app-databases": "Cơ sở dữ liệu",
 
-  "alphabetical": "Theo bảng chữ cái",
-  "popularity": "Theo phổ biến",
-  "categorical": "Theo phân loại",
-  "ratings": "Theo đánh giá",
+  "alphabetical": "Sắp xếp theo bảng chữ cái",
+  "popularity": "Sắp xếp theo số lượt tải giảm dần",
+  "categorical": "Sắp xếp theo thể loại",
+  "ratings": "Sắp xếp theo đánh giá giảm dần",
 
   "apps": "ứng dụng",
 
   "all-apps": "Tất cả ứng dụng",
 
-  "info": "Thông tin",
+  "info": "Chi tiết",
   "download": "Tải xuống",
-  "share": "Chia sẻ",
+  "share": "Sao chép URL",
 
   "categories": "Thể loại",
   "authors": "Tác giả",
   "maintainers": "Người bảo trì",
-  "dependencies": "Phụ thuộc",
+  "dependencies": "Yêu cầu",
   "version": "Phiên bản",
   "size": "Kích thước",
-  "type": "Kiểu",
+  "type": "Kiểu ứng dụng",
   "locales": "Ngôn ngữ",
-  "anti-features": "Tính năng hại",
-  "ads": "Quảng cáo",
-  "tracking": "Theo dõi",
+  "anti-features": "T.năng ko mong muốn",
+  "ads": "Chứa quảng cáo",
+  "tracking": "Theo dõi hành vi người dùng",
   "license": "Giấy phép",
-  "downloads": "Lượt tải về",
+  "downloads": "Số lượt tải về",
   "rating": "Đánh giá",
   "your-rating": "Đánh giá của bạn",
   "you": "bạn",
-  "login-to-rate": "Để đánh giá, đăng nhập bằng nút người dùng ở trên góc bên phải.",
+  "login-to-rate": "Để xếp hạng và nhận xét, vui lòng đăng nhập bằng nút Tài khoản ở góc trên bên phải trang web.",
   "point": {
-    "1": "Một điểm",
-    "2": "Hai điểm",
-    "3": "Ba điểm",
-    "4": "Bốn điểm",
-    "5": "Năm điểm"
+    "1": "1 sao",
+    "2": "2 sao",
+    "3": "3 sao",
+    "4": "4 sao",
+    "5": "5 sao"
   },
   "load-ratings": "Đang tải đánh giá...",
-  "rating-incomplete-blurb": "2 hoặc nhiều ký tự cần thiết để đánh giá!",
-  "website": "Trang mạng",
-  "repo": "Repo Git",
-  "donate": "Quyên tặng nhà lập trình",
+  "rating-incomplete-blurb": "Nhận xét cần dài tối thiểu 2 kí tự.",
+  "website": "Trang web",
+  "repo": "Mã nguồn",
+  "donate": "Ủng hộ tác giả",
 
   "qr-scan-help": "Quét mã QR bằng ứng dụng khách trên thiết bị được hỗ trợ để cài đặt.",
-  "install-alternative-help": "Hoặc cài đặt trực tiếp / tải xuống thủ công dưới đây.",
-  "install-directly": "Cài đặt trực tiếp.",
-  "download-manually": "Tải về thủ công",
+  "install-alternative-help": "hoặc bạn có thể cài đặt trực tiếp/tải xuống tệp ứng dụng thủ công.",
+  "install-directly": "Cài đặt trực tiếp",
+  "download-manually": "Tải tệp ứng dụng",
 
   "login-bhackers": "Đăng nhập vào BananaHackers",
   "username": "Tên tài khoản",
   "logintoken": "Mật khẩu",
-  "save-login-details": "Lưu lại thông tin đăng nhập.",
-  "login-failed-blurb": "Đăng nhập / đăng ký không thành công. Vui lòng thử lại bằng cách sử dụng thông tin đăng nhập khác nhau hoặc thử lại sau.",
+  "save-login-details": "Lưu thông tin đăng nhập vào cookie",
+  "login-failed-blurb": "Đã xảy ra lỗi: Có thể bạn đã nhập sai thông tin hoặc bị trùng tên tài khoản. Bạn đã nhập đúng mật khẩu chưa? Kiểm tra lại xem. Nếu bạn vẫn gặp lỗi, hãy chờ một lúc và thử lại sau, vì có lẽ vấn đề nằm ở phía máy chủ :(",
   "login-signup": "Đăng nhập/Đăng ký",
 
-  "terms-alert": "Bằng cách sử dụng dịch vụ, bạn đồng ý với một số yêu cầu được định tuyến lại với cors.bridged.cc và",
-  "privacy-policy": "Chính sách bảo mật",
+  "terms-alert": "Bằng việc tiếp tục sử dụng dịch vụ, bạn đồng ý với việc một số yêu cầu của bạn sẽ được chuyển đến cors.bridged.cc để xử lý và việc thu thập dữ liệu được trình bày trong",
+  "privacy-policy": "Chính sách về Quyền riêng tư",
 
-  "copy-to-clipboard-success": "Sao chép đường link chia sẻ vào clipboard!"
+  "copy-to-clipboard-success": "Đã sao chép đường link ứng dụng vào clipboard."
 }
