--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -16,6 +16,17 @@
   "apps": "aplikacji",
 
   "all-apps": "Wszystkie aplikacje",
+  "communication": "Communication",
+  "education": "Education",
+  "games": "Games",
+  "health": "Health",
+  "multimedia": "Multimedia",
+  "news": "News",
+  "search": "Search",
+  "social": "Social",
+  "themes": "Themes",
+  "travel": "Travel",
+  "utility": "Utility",
 
   "info": "Informacje",
   "download": "Pobierz",
